--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -12,10 +12,31 @@
 
     <LinearLayout
         android:id="@+id/comment_item_row"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/listings_comment_bg">
+
+        <LinearLayout
+            android:id="@+id/comment_link_metadata"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/comment_data_height"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/comment_data_margin_horizontal"
+            android:paddingRight="@dimen/comment_data_margin_horizontal"
+            android:orientation="vertical"
+            android:background="@color/primary_dark">
+
+            <TextView
+                android:id="@+id/comment_link_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/comment_link_title"
+                android:textSize="@dimen/comment_body_text_size"
+                android:textColor="@android:color/white"/>
+
+        </LinearLayout>
 
         <include layout="@layout/comment_layout" />
 
