--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
     <style name="LinkTitleTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">@dimen/link_title_text_size</item>
         <item name="android:textColor">@color/primary_text</item>
     </style>
@@ -64,6 +65,7 @@
     <style name="LinkDomainTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">@dimen/link_domain_text_size</item>
         <item name="android:textColor">@color/secondary_text</item>
         <!--<item name="android:textStyle">italic</item>-->
@@ -71,6 +73,10 @@
 
     <style name="GildedTextView" parent="LinkDomainTextView">
         <!-- Simply inherits from LinkDomainTextView for now -->
+    </style>
+
+    <style name="CommentLinkTitleTextView" parent="LinkTitleTextView">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="LinkScoreTextView">
