--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -20,10 +20,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/link_list_item_margin_vertical"
-            android:layout_marginBottom="@dimen/link_list_item_margin_vertical"
-            android:layout_marginLeft="@dimen/link_list_item_margin_horizontal"
-            android:layout_marginRight="@dimen/link_list_item_margin_horizontal"
+            android:paddingTop="@dimen/link_list_item_margin_vertical"
+            android:paddingBottom="@dimen/link_list_item_margin_vertical"
+            android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+            android:paddingRight="@dimen/link_list_item_margin_horizontal"
             android:orientation="vertical">
 
             <TextView
