--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -1,26 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/primary"
-    android:elevation="@dimen/toolbar_elevation">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:theme="@style/ToolbarThemeLightText"
-        app:popupTheme="@style/Theme.AppCompat.Light"/>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/navigation_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabTextColor="@color/primary_light"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabMode="scrollable" />
-
-</LinearLayout>
+    android:elevation="@dimen/toolbar_elevation"
+    app:theme="@style/ToolbarThemeLightText"
+    app:popupTheme="@style/Theme.AppCompat.Light"/>
