--- a/app/src/main/res/layout/listings_user_profile_fragment.xml
+++ b/app/src/main/res/layout/listings_user_profile_fragment.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" >
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/navigation_tabs"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/user_profile_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary"
