--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,5 +55,7 @@
     <dimen name="comment_saved_icon_margin">6dp</dimen>
     <dimen name="comment_author_background_corner">3dp</dimen>
     <dimen name="comment_author_background_padding">3dp</dimen>
+    <dimen name="ads_banner_width">320dp</dimen>
+    <dimen name="ads_banner_height">50dp</dimen>
 
 </resources>
