--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Navigation drawer -->
     <item type="id" name="drawer_log_in" />
     <item type="id" name="drawer_user_profile" />
     <item type="id" name="drawer_front_page" />
     <item type="id" name="drawer_r_all" />
     <item type="id" name="drawer_subreddits" />
     <item type="id" name="drawer_random_subreddit" />
+
+    <!-- AdMob -->
+    <string name="ads_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ads_listings_banner_id">ca-app-pub-8702732471277092/5149537966</string>
+
 </resources>
