--- a/app/src/main/res/layout/listings_banner_ad.xml
+++ b/app/src/main/res/layout/listings_banner_ad.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/ad_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"/>
+    android:layout_marginTop="@dimen/link_card_margin"
+    android:layout_marginBottom="@dimen/link_card_margin"
+    card_view:cardElevation="@dimen/link_card_elevation"
+    card_view:cardCornerRadius="@dimen/link_card_corner_radius"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:orientation="horizontal"
+        android:background="@drawable/link_card_bg">
+
+        <ImageView
+            android:id="@+id/ad_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@null"/>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/ad_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+               <!-- Does not fit in layout cleanly at the moment
+               <Button
+                    android:id="@+id/ad_cta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/> -->
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/ad_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/ad_cta"
+                android:id="@+id/ad_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/ad_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
