--- a/app/src/main/res/layout/listings_banner_ad.xml
+++ b/app/src/main/res/layout/listings_banner_ad.xml
@@ -11,46 +11,54 @@
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/link_card_bg">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/listings_card_bg">
 
-        <ImageView
-            android:id="@+id/ad_icon"
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@null"/>
+            android:padding="@dimen/banner_ad_margin"
+            android:background="@color/primary_dark"
+            android:text="@string/advertisement"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/banner_ad_header_text_size"/>
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:padding="@dimen/banner_ad_margin"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ad_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/banner_ad_margin"
+                android:background="@null"/>
 
             <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/ad_title"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/banner_ad_text_size"/>
 
-               <!-- Does not fit in layout cleanly at the moment
-               <Button
-                    android:id="@+id/ad_cta"
+                <TextView
+                    android:id="@+id/ad_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/> -->
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/banner_ad_text_size"/>
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/ad_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
