--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,5 +57,8 @@
     <dimen name="comment_author_background_padding">3dp</dimen>
     <dimen name="ads_banner_width">320dp</dimen>
     <dimen name="ads_banner_height">50dp</dimen>
+    <dimen name="banner_ad_margin">4dp</dimen>
+    <dimen name="banner_ad_text_size">14sp</dimen>
+    <dimen name="banner_ad_header_text_size">10sp</dimen>
 
 </resources>
