--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -4,6 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="@dimen/link_card_margin"
     android:layout_marginBottom="@dimen/link_card_margin"
     card_view:cardElevation="@dimen/link_card_elevation"
@@ -33,6 +34,7 @@
                 android:id="@+id/comment_link_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                tools:text="The brown fox jumped over the white fence"
                 style="@style/CommentLinkTitleTextView"/>
 
         </LinearLayout>
