--- a/app/src/main/res/layout/listings_banner_ad.xml
+++ b/app/src/main/res/layout/listings_banner_ad.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/banner_ad_margin"
                 android:layout_marginRight="@dimen/banner_ad_margin"
                 android:background="@null"/>
 
