--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -36,29 +36,15 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:id="@+id/gilded_view"
-                    android:orientation="horizontal"
+                <TextView
+                    android:id="@+id/link_gilded_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start">
-
-                    <ImageView
-                        android:id="@+id/gilded_image_view"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_gilded_filled_outlined"/>
-
-                    <TextView
-                        android:id="@+id/link_gilded_text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        tools:text="× 2"
-                        style="@style/GildedTextView"/>
-
-                </LinearLayout>
+                    android:layout_gravity="center_vertical"
+                    android:drawableStart="@drawable/ic_gilded_filled_outlined"
+                    android:drawableLeft="@drawable/ic_gilded_filled_outlined"
+                    tools:text="× 2"
+                    style="@style/GildedTextView"/>
 
                 <TextView
                     android:id="@+id/link_domain"
@@ -85,6 +71,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginEnd="@dimen/link_data_margin"
                 android:layout_marginRight="@dimen/link_data_margin"
                 android:orientation="vertical">
 
